--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reacttuts",
+  "name": "instagram",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.3",
+    "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-loading-skeleton": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
@@ -41,7 +45,7 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
     "autoprefixer": "^9.8.6",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "babel-eslint": "^10.1.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
